web/static/note-rendered.css
.note-rendered {
  padding: 40px;
  line-height: 1.5;
}

.note-rendered h1 {
  margin-bottom: 16px;
}
.note-rendered h2 {
  margin-bottom: 14px;
}
.note-rendered h3 {
  margin-bottom: 12px;
}
.note-rendered h4 {
  margin-bottom: 10px;
}
.note-rendered h5 {
  margin-bottom: 10px;
}
.note-rendered h6 {
  margin-bottom: 10px;
}

.note-rendered p, .note-rendered ul, .note-rendered ol, .note-rendered pre {
  margin-bottom: 10px;
}
.note-rendered ul ul, .note-rendered ul ol, .note-rendered ol ul, .note-rendered ol ol {
  margin-bottom: 0px;
}

.note-rendered ul, .note-rendered ol {
  margin-left: 32px;
}

.note-rendered code, .note-rendered pre {
  background-color: #ececec;
}
.note-rendered code {
  padding: 4px;
  border-radius: 2px;
}

.note-rendered pre {
  border-radius: 2px;
}
.note-rendered pre code {
  background: none;
  display: block;
  width: 100%;
  padding: 16px;
}

.note-rendered img {
  max-width: 100%;
}

